Revision history for Perl extension IPC::System::Simple.

{{$NEXT}}

        * BUILD: No longer mark BSD::Resource as required (GH #5).

1.23      2013-10-08 14:50:50 Australia/Melbourne

        * BUGFIX: Silence "Statement unlikely to be reached" warning
          (Karen Etheridge)

        * BUGFIX: Repository information fix, and typo fixes (@dsteinbrunner)

        * BUILD: Converted to using dzil.

1.22  Tue Oct  8 14:49:43 AUSEST 2013

        * Same as 1.23 release, but with booched changelog. Oops! :)

1.21  Tue Mar 23 12:08:47 AUSEST 2010
        * TEST: t/win32.t has more sane handling of skipped and
          unimplimented tests.

        * TEST: Author tests no longer leave the permissions of
          not_an_exe.txt permanently changed.

        * BUGFIX: capture/capturex no longer break STDOUT when
          running an unknown command under Windows.  Many thanks
          to Jan Krynicky for a fix.  (RT #48319)

        * BUILD: Upgraded to Module::Install 0.93.

1.20  Sat Jan  9 15:08:41 AUSEST 2010

        * TEST: t/win32.t no longer claims to have more tests than
          it really has.  This fixes an install issue under Windows.
          RT #53124.  Thanks to Erez Schatz and Curtis Jewell for
          spotting this.

1.19  Fri Dec  4 14:14:25 AUSEST 2009

        * TEST: Added tests to ensure correct behaviour when
          calling commands in Windows which are contained in directories
          that contain spaces. (These tests are currently skiped,
          as they're testing for a known bug.)

        * BUGFIX: Spurious warnings about redefining POSIX macros
          no longer plague Windows systems.

1.18  Sun Feb  8 19:09:15 AUSEDT 2009

        * BUGFIX: IPC::System::Simple should now compile cleanly
          under 5.6.0 and 5.6.1 (as well as 5.6.2+).  Many thanks
          to David Golden for spotting this bug.  (RT #43098)

        * DOCUMENTATION: "Advanced" is now spelt correctly under